--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -4,9 +4,7 @@
 
 @font-face {
     font-family: 'texgyreadventorregular';
-    src: url('texgyreadventor-regular-webfont.woff2') format('woff2'),
-         url('texgyreadventor-regular-webfont.woff') format('woff'),
-         url('texgyreadventor-regular-webfont.ttf') format('truetype');
+    src: url('texgyreadventor-regular-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 
@@ -17,9 +15,7 @@
 
 @font-face {
     font-family: 'texgyreadventorbold';
-    src: url('texgyreadventor-bold-webfont.woff2') format('woff2'),
-         url('texgyreadventor-bold-webfont.woff') format('woff'),
-         url('texgyreadventor-bold-webfont.ttf') format('truetype');
+    src: url('texgyreadventor-bold-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 
