--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html, body {
     background-color: #0f0;
 }
@@ -19,7 +18,7 @@ body {
 .box-bottom .left,
 .box-bottom .center,
 .box-bottom .right {
-    height: 10rem;
+    height: 8rem; /*align with height of bottom*/
 }
 
 .box-top {
@@ -49,12 +48,9 @@ body {
 }
 
 .box-attention {
+    padding: 0 0 0 2rem;
     min-height: 0.5rem;
     background: #E88100;
-}
-.box-attention .box-attention-text {
-    padding: .5rem 1rem;
-    color: #fff;
 }
 
 .triangle-up:first-child {
@@ -74,7 +70,7 @@ body {
     display: block;
     position: absolute;
     top: 2.4rem;
-    bottom: 10rem;
+    bottom: 8rem;/*align with height of bottom*/
     width: 100%;
     background: #225378;
     color: #fff;
@@ -86,4 +82,14 @@ body {
 twitter {
     display: block;
     padding: 1rem;
+    font-size: 1.025rem;
+}
+
+attention {
+    display: block;
+}
+
+attention .text {
+    font-size: 2rem;
+    color: #fff;
 }
